--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.etws-market-sdk-1.0.jar=TradeBot 3rd Party Libraries\\etws-market
 file.reference.etws-oauth-sdk-1.0.jar=TradeBot 3rd Party Libraries\\etws-oauth-sdk-1.0.jar
 file.reference.etws-order-sdk-1.0.jar=TradeBot 3rd Party Libraries\\etws-order-sdk-1.0.jar
 file.reference.log4j-1.2.17.jar=TradeBot 3rd Party Libraries\\log4j-1.2.17.jar
+file.reference.sqljdbc42.jar=TradeBot 3rd Party Libraries\\sqljdbc42.jar
 file.reference.xstream-1.3.1.jar=TradeBot 3rd Party Libraries\\xstream-1.3.1.jar
 includes=**
 jar.compress=false
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.etws-oauth-sdk-1.0.jar}:\
     ${file.reference.etws-order-sdk-1.0.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.xstream-1.3.1.jar}
+    ${file.reference.xstream-1.3.1.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
