--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ file.reference.log4j-1.2.17.jar=TradeBot 3rd Party Libraries\\log4j-1.2.17.jar
 file.reference.sqljdbc42.jar=TradeBot 3rd Party Libraries\\sqljdbc42.jar
 file.reference.xstream-1.3.1.jar=TradeBot 3rd Party Libraries\\xstream-1.3.1.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.commons-codec-1.3.jar}:\
     ${file.reference.commons-httpclient-3.1.jar}:\
